# soliplex

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: soliplex.yaml
db/rag/: README
example/: README.md  installation.yaml  minimal.yaml  no_auth.yaml
example/completions/chat-bot/: completion_config.yaml  completions_config.yaml
example/oidc/: cacert.pem  config.yaml
example/quizzes/: test_quiz.json
example/rooms/: README.md
example/rooms/haiku/: prompt.txt  room_config.yaml
example/rooms/mcptest/: prompt.txt  room_config.yaml
example/rooms/quiztest/: room_config.yaml
example/rooms/tooltest/: room_config.yaml
src/flutter/: .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pubspec.yaml
src/flutter/android/app/: build.gradle.kts
src/flutter/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
src/flutter/ios/Runner/: Info.plist  Runner.entitlements
src/flutter/ios/Runner.xcodeproj/: project.pbxproj
src/flutter/lib/: configure.dart  controllers.dart  list_extension.dart  main.dart  oidc_auth_interactor.dart  oidc_auth_token_response.dart  oidc_client.dart  pydantic_provider.dart  pydantic_quiz_provider.dart  secure_sso_storage.dart  secure_storage_capabilities.dart  secure_storage_gateway.dart  secure_token_storage.dart  secure_url_storage.dart  soliplex_client.dart  sso_config.dart
src/flutter/lib/controllers/: app_state_controller.dart  current_chatroom_controller.dart  oidc_auth_controller.dart  pydantic_provider_controller.dart  service_url_controller.dart
src/flutter/lib/entities/: chatpage_config.dart  chatroom_config.dart  chatroom_config.g.dart  chatroom_with_conversations.dart  conversation_entry.dart  conversation_entry.g.dart  quiz_config.dart  quiz_config.g.dart  quizzes.dart  quizzes.g.dart
src/flutter/lib/shared_widgets/: background_image_stack.dart  soliplex_client_appbar.dart
src/flutter/lib/views/: auth_page.dart  browser_auth_page.dart  chat_page.dart  chatroom.dart  chatroom_conversations_view.dart  chatroom_info_view.dart  load_chatrooms_page.dart  login_page.dart  map_page.dart  quiz_page.dart  select_chatroom_view.dart  select_conversation_view.dart  (+2 more)
src/flutter/linux/: CMakeLists.txt
src/flutter/web/: index.html  manifest.json
src/flutter/windows/: CMakeLists.txt
src/soliplex/: agents.py  auth.py  cli.py  completions.py  config.py  convos.py  installation.py  main.py  mcp_auth.py  mcp_client.py  mcp_server.py  models.py  quizzes.py  rooms.py  secrets.py  tools.py  util.py  views.py
src/soliplex/tui/: cli.py  main.py  serve.py
src/soliplex/views/: __init__.py  auth.py  completions.py  convos.py  installation.py  quizzes.py  rooms.py
tests/functional/: test_functional.py
tests/unit/: conftest.py  test_agents.py  test_auth.py  test_completions.py  test_config.py  test_convos.py  test_installation.py  test_main.py  test_mcp_auth.py  test_mcp_client.py  test_mcp_server.py  test_models.py  test_quizzes.py  test_rooms.py  test_secrets.py  test_tools.py  test_util.py  test_views.py
tests/unit/views/: test_all_views.py  test_auth_views.py  test_completions_views.py  test_convos_views.py  test_installation_views.py  test_quizzes_views.py  test_rooms_views.py
(+171 files in other folders)
