[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soliplex"
version = "0.0"
description = "<ALAN FILL THIS IN>"
authors = [{ name = "Enfold", email = "info@enfoldsystems.net" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "authlib",
    "docling",
    "fastapi",
    "fastmcp>=2.12.3,<2.13",
    "haiku.rag >= 0.10.2",
    "httpx",
    "itsdangerous",
    "jwcrypto",
    "logfire[fastapi]",
    "openai>=1.12.0",
    "pydantic-ai >= 1.0.1",
    "pyjwt",
    "python-dotenv",
    "python-keycloak",
    "pyyaml",
    "ruff",
    "sqlmodel",
    "starlette",
    "trio",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "coverage",
    "anyio",
    "trio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
# skip 'tests/functional' by default
testpaths = ["tests/unit"]
addopts = "--cov=soliplex --cov=tests/unit --cov-branch --cov-fail-under=100"
filterwarnings = [
    # "ignore::DeprecationWarning:<source-package>",
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
exclude = [
]
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
